--- a/Pulpifier/style.css
+++ b/Pulpifier/style.css
@@ -80,6 +80,9 @@ p.e {
   bottom: -15vh;
   height: 100vh;
 }
+#pulp > img.f {
+  transform: translateX(-50%) scaleX(-1);
+}
 img.p-1\/6 { left: calc(100% * 1/6); }
 img.p-2\/6, img.p-1\/3 { left: calc(100% * 2/6); }
 img.p-3\/6, img.p-2\/4, img.p-1\/2 { left: 50%; }
