--- a/Pulpifier/style.css
+++ b/Pulpifier/style.css
@@ -6,11 +6,11 @@ html, body {
   position: relative;
   font-family: "Noto Sans", sans-serif;
   line-height: 1.4;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 #pulp {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: absolute;
   top: 0px;
@@ -23,7 +23,7 @@ html, body {
   z-index: 1;
 }
 #back {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: absolute;
   top: 0px;
