--- a/Pulpifier/style.css
+++ b/Pulpifier/style.css
@@ -60,7 +60,8 @@ html, body {
   margin: 0.25em 0px;
 }
 #text hr {
-  margin: 1em 0px;
+  margin: 1em auto;
+  max-width: 200px;
 }
 #foot > div:first-child {
   width: 21em;
