--- a/Pulpifier/style.css
+++ b/Pulpifier/style.css
@@ -4,7 +4,7 @@ html, body {
 }
 #app {
   position: relative;
-  font-family: "Noto Sans", sans-serif;
+  font-family: Roboto, sans-serif;
   line-height: 1.4;
   width: 100%;
   height: 100vh;
@@ -54,6 +54,7 @@ html, body {
   height: 100%;
   background-color: #f8efd4f0;
   display: flow-root;
+  font-size: 1.05em;
 }
 #text h1, #text h2, #text h3, #text h4, #text h5, #text h6 {
   text-align: center;
@@ -92,9 +93,10 @@ b.speaker {
   min-width: 2em;
   text-align: center;
   background: linear-gradient(to right, transparent 0, #f8efd4f0 0.5em, #f8efd4f0 calc(100% - 0.5em), transparent 100%);
+  font-size: 1.05em;
 }
 b.speaker + div > span.d {
-  font-weight: bold;
+  font-weight: 550;
 }
 p.e {
   margin: 0.25em;
