--- a/Pulpifier/style.css
+++ b/Pulpifier/style.css
@@ -9,6 +9,9 @@ html, body {
   width: 100%;
   height: 100vh;
   --vnFontSize: 1.5vh;
+  --vnDialogueFontWeight: 550;
+  --vnLineHeight: 1.4;
+  --vnFontSizeReally: 1.05em;
 }
 #pulp {
   width: 100%;
@@ -54,7 +57,8 @@ html, body {
   height: 100%;
   background-color: #f8efd4f0;
   display: flow-root;
-  font-size: 1.05em;
+  font-size: var(--vnFontSizeReally);
+  line-height: var(--vnLineHeight);
 }
 #text h1, #text h2, #text h3, #text h4, #text h5, #text h6 {
   text-align: center;
@@ -93,10 +97,10 @@ b.speaker {
   min-width: 2em;
   text-align: center;
   background: linear-gradient(to right, transparent 0, #f8efd4f0 0.5em, #f8efd4f0 calc(100% - 0.5em), transparent 100%);
-  font-size: 1.05em;
+  font-size: var(--vnFontSizeReally);
 }
 b.speaker + div > span.d {
-  font-weight: 550;
+  font-weight: var(--vnDialogueFontWeight);
 }
 p.e {
   margin: 0.25em;
